# Computing

./: .clang-format  .gitignore
Graph_lib/: CMakeLists.txt  GUI.cpp  GUI.h  Graph.cpp  Graph.h  Simple_window.h  Vector_ref.h  Window.cpp  Window.h  fltk.h  makefile  test.cpp  test_animation.cpp  test_automove.cpp  test_keyboard.cpp  test_move.cpp  test_thread.cpp  test_vector_ref.cpp
Graph_lib/Graph_lib/: CMakeLists.txt  GUI.cpp  GUI.h  Graph.h  Simple_window.h  Vector_ref.h  Window.cpp  Window.h
examples/ex01/: ex01.cpp  makefile
examples/ex02/: CMakeLists.txt  ex02a.cpp  ex02b.cpp  ex02c.cpp  ex02d.cpp  ex02e.cpp  ex02f.cpp  ex02g.cpp  ex02h.cpp  ex02i.cpp  ex02j.cpp  ex02k.cpp  makefile
examples/ex03/: CMakeLists.txt  ascii_table.cpp  calc-0.1.cpp  calc-0.2.cpp  calc-0.3.cpp  calc-0.4.cpp  makefile  my_sqrt.cpp  pi_Archimedes_inner.cpp  pi_Liu_inner.cpp  prime_Eratosthenes.cpp  sort_vector_double.cpp  square_table_for.cpp  square_table_while.cpp  vector_numbers.cpp  vector_words.cpp
examples/ex04/: catch_exception.cpp  grammar_error.cpp  logical_error.cpp  makefile  multiple_exceptions.cpp  post_condition.cpp  sqrt_error.cpp  sqrt_exception.cpp  sqrt_nan.cpp  type_error.cpp  vector_error.cpp  vector_range.cpp  warning.cpp
examples/ex04/link_error/: area.cpp  main.cpp
examples/ex05/calc-1.x/: CMakeLists.txt  calc-1.0.cpp  calc-1.1.cpp  makefile
examples/ex05/calc-2.0/: CMakeLists.txt  calc-2.0.cpp  makefile
examples/ex05/calc-2.1/: CMakeLists.txt  Token_stream.cpp  calc-2.1.cpp  makefile
examples/ex05/calc-2.2/: Token_stream.cpp  Token_stream.h  calc-2.2.cbp  calc-2.2.cpp  makefile
examples/ex05/calc-2.2-wrong/: CMakeLists.txt  Token_stream.h  calc-2.2.cpp
examples/ex05/misc/: CMakeLists.txt  factorial.cpp  hanoi.cpp  makefile  test_token.cpp
examples/ex06/calc-2.3/: CMakeLists.txt  Token.h  calc-2.3.cpp  makefile
examples/ex06/calc-2.4/: CMakeLists.txt  calc-2.4.cpp  makefile
examples/ex06/calc-2.5/: CMakeLists.txt  Token.h  Token_stream.cpp  calc-2.5.cpp  makefile
examples/ex06/calc-2.6/: CMakeLists.txt  calc-2.6.cpp  makefile
examples/ex06/calc-2.7/: CMakeLists.txt  Token_stream.cpp  Token_stream.h  calc-2.7.cpp  input1.txt  makefile
examples/ex06/calc-3.0/: CMakeLists.txt  Token.h  Token_stream.cpp  Token_stream.h  calc-3.0.cpp  input1.txt  makefile
examples/ex06/misc/: CMakeLists.txt  makefile  test_char.cpp  test_map.cpp
examples/ex07/calc-3.0/: CMakeLists.txt  Calculator.cpp  Calculator.h  Token_stream.cpp  Token_stream.h  Variable.cpp  Variable.h  calc-3.0.cpp  input1.txt
examples/ex07/misc/: CMakeLists.txt  makefile  test_scope.cpp
examples/ex08/calc-3.0/: Calculator.cpp  Calculator.h  Token.h  Token_stream.cpp  Token_stream.h  Variable.cpp  Variable.h  calc-3.0.cpp  makefile
examples/ex08/chrono/: CMakeLists.txt  Chrono.cpp  Chrono.h  makefile  test_date.cpp  test_date.java
examples/ex08/complex/: Complex.cpp  Complex.h  makefile  test_complex.cpp
examples/ex08/misc/: CMakeLists.txt  makefile  test_copy.cpp
examples/ex08/rational/: CMakeLists.txt  Rational.cpp  Rational.h  makefile  test_rational.cpp
examples/ex09/Punct_stream/: CMakeLists.txt  Punct_stream.cpp  Punct_stream.h  input.txt  makefile  test.csv  test_csv.cpp  test_ps.cpp
examples/ex09/calc-3.x/: CMakeLists.txt  Calculator.cpp  Calculator.h  Token.h  Token_stream.cpp  Token_stream.h  Variable.h  calc-3.0.cpp  calc-3.1.cpp  calc-3.2.cpp  calc-3.3.cpp  input1.txt  input2.txt  makefile
examples/ex09/complex/: CMakeLists.txt  Complex.cpp  Complex.h  test_complex.cpp
examples/ex09/read_int/: CMakeLists.txt  makefile  (+2 more)
examples/ex10/calc-4.0/: CMakeLists.txt  Calculator.cpp  Calculator.h  GUI.cpp  GUI.h  Graph.cpp  Point.h  Token.h  Token_stream.h  Variable.cpp  Window.h  calc-4.0.cpp  makefile
examples/ex10/calc-4.0/Graph_lib/: Graph.cpp  Point.h
examples/ex10/test_fltk/: CMakeLists.txt  makefile  test_fltk.cpp
just_for_fun/bouncing_ball/: Ball.cpp  Ball.h  Block.cpp  Block.h  CMakeLists.txt  My_window.cpp  My_window.h  Paddle.cpp  Paddle.h  Scene.cpp  Scene.h  bouncing_ball.cpp  constants.h
just_for_fun/bouncing_ball/Graph_lib/: Graph.h  fltk.h
just_for_fun/n_body/: calc_2body.cpp  calc_3body.cpp  makefile  plot_2body.py  plot_3body.py
(+53 files in other folders)
